   - djm@cvs.openbsd.org 2007/01/22 13:06:21
     [scp.c]
     fix detection of whether we should show progress meter or not: scp
     tested isatty(stderr) but wrote the progress meter to stdout. This patch
     makes it test stdout. bz#1265 reported by junkmail AT bitsculpture.com;
     of dtucker@
   - stevesk@cvs.openbsd.org 2007/02/14 14:32:00
     [bufbn.c]
     typos in comments; ok jmc@

20070128
 - (djm) [channels.c serverloop.c] Fix so-called "hang on exit" (bz #52)
   when closing a tty session when a background process still holds tty
   fds open. Great detective work and patch by Marc Aurele La France,
   slightly tweaked by me; ok dtucker@

20070123
 - (dtucker) [openbsd-compat/bsd-snprintf.c] Static declarations for public
   library interfaces aren't very helpful. Fix up the DOPR_OUTCH macro
   so it works properly and modify its callers so that they don't pre or
   post decrement arguments that are conditionally evaluated. While there,
   put SNPRINTF_CONST back as it prevents build failures in some
   configurations.  ok djm@ (for most of it)

20070122
 - (djm) [ssh-rand-helper.8] manpage nits;
   from dleonard AT vintela.com (bz#1529)

20070117
 - (dtucker) [packet.c] Re-remove in_systm.h since it's already in includes.h
   and multiple including it causes problems on old IRIXes.  (It snuck back
   in during a sync.)  Found (again) by Georg Schwarz.

20070114
 - (dtucker) [ssh-keygen.c] av -> argv to match earlier sync.
 - (djm) [openbsd-compat/bsd-snprintf.c] Fix integer overflow in return
   value of snprintf replacement, similar to bugs in various libc
   implementations. This overflow is not exploitable in OpenSSH. 
   While I'm fiddling with it, make it a fair bit faster by inlining the
   append-char routine; ok dtucker@

20070105
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2006/11/14 19:41:04
     [ssh-keygen.c]
     use argc and argv not some made up short form
   - ray@cvs.openbsd.org 2006/11/23 01:35:11
     [misc.c sftp.c]